--- a/style.css
+++ b/style.css
@@ -10,17 +10,23 @@ img {
 a {
 	color: darkslategray;
 	font-size: 16px;
-	user-select: 
 }
+
 
 .menu li {
 	list-style-type: none;
 }
-
 .menu a {
 	color: darkslategray;
 	font-size: 16px;
 	text-decoration: none;
+}
+.menu a:hover {
+	color: black;
+	font-weight: 600;
+}
+.logo {
+	border-radius: 50%;
 }
 
 .product h3 {
@@ -68,27 +74,39 @@ a {
 	font-size: 16px;
 	font-weight: 500; 
 	color: darkslategray;
+	text-transform: capitalize;
 }
 
 .contacts {
 	line-height: 24px;
 }
 
-/*Почему-то не работают рамки*/
+/*Почему-то не работают рамки
+м/б этот параметр не применим к карте ...*/
 .yandex-map {  
-	border-width: 10px;
-	border-color: gray;
-	border-style: solid;
-}
+	border: 20px solid #000;
 
+}
 
 .contacts input {
-	height: 18px;
+	height: 30px;
 	width: 300px;
-
 }
 
 
-footer {
+.contacts .email:focus {
+	background-color: lightblue;
+	color: black;
+	font-weight: 600;
+}
+
+.contacts button {
+	height: 40px;
+	width: 150px;
+	font-size: 12px;
+	background-color: lightgray;
+}
+
+.footer {
 	text-align: center;
 }
