--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@ a {
 	font-size: 16px;
 }
 
+.header {
+	border-bottom: 2px solid darkgray;
+}
 
 .menu li {
 	list-style-type: none;
@@ -25,14 +28,13 @@ a {
 	color: black;
 	font-weight: 600;
 }
-.logo {
-	border-radius: 50%;
-}
+
 
 .catalog_list a:first-letter {
 	color: darkred;
 	font-size: 200px;
 }
+
 .product h3 {
 	color: black;
 	font-size: 18px;
@@ -41,10 +43,13 @@ a {
 }
 
 .product img {
-	height: 150px;
+	height: 250px;
 	border-color: gray;
 	border-width: 1px 1px 2px 2px;
 	border-style: solid;
+}
+.product img:hover {
+	border-color: transparent;
 }
 
 .product li {
@@ -70,6 +75,13 @@ a {
 	font-weight: 400;
 	line-height: 24px;
 	text-align: left;
+	margin: 0 auto;
+}
+.product
+.full_descriptions_text:first-letter,
+.short_descriptions_text:first-letter {
+	font-size: 26px;
+	color: black;
 }
 
 .contacts input,
@@ -83,13 +95,6 @@ a {
 
 .contacts {
 	line-height: 24px;
-}
-
-/*Почему-то не работают рамки
-м/б этот параметр не применим к карте ...*/
-.yandex-map {  
-	border: 20px solid #000;
-
 }
 
 .contacts input {
@@ -121,10 +126,11 @@ a {
 }
 
 table {
-	border: 1px solid black;
+	border: 1px solid darkgray;
 	height: 60px;
 	width: 500px;
 	text-align: left;
+	margin: 10px 0px;
 
 }
 
@@ -135,5 +141,8 @@ tr:nth-child(2n) {
 
 
 .footer {
+	border-top: 2px solid darkgray;
 	text-align: center;
+	padding: 15px;
+	margin: 15px;
 }
