--- a/style.css
+++ b/style.css
@@ -12,27 +12,69 @@ a {
 	font-size: 16px;
 }
 
-.header {
-	border-bottom: 2px solid darkgray;
+.container {
+	width: 90%;
+	margin: 0 auto;
+}
+.container h1,
+.container h2 {
+	margin: 30px;
 }
 
+
+.logo {
+	margin-left: 90px;
+	margin-bottom: 10px;
+
+}
+
+.header {
+	display: flex;
+	justify-content: space-between;
+	align-items: flex-end;
+	height: 100px;
+	border-bottom: 2px solid darkgray;
+	margin: 10px;
+
+}
+.menu ul {
+	justify-content: space-around;
+}
 .menu li {
+	float: left;
+	padding: 30px;
 	list-style-type: none;
 }
 .menu a {
-	color: darkslategray;
-	font-size: 16px;
 	text-decoration: none;
+	font-size: 24px;
+
 }
 .menu a:hover {
 	color: black;
 	font-weight: 600;
 }
 
+.catalog_list
+.short_descriptions_text {
+	color: #707070;
+	font-size: 14px;
+	font-style: italic;
+	line-height: 16px;
 
-.catalog_list a:first-letter {
-	color: darkred;
-	font-size: 200px;
+}
+
+.catalog_element {
+	border: 1px solid black;
+	margin: 10px;
+	padding: 10px;
+}
+
+.catalog_list img {
+	
+}
+.catalog_list a {
+
 }
 
 .product h3 {
@@ -58,6 +100,7 @@ a {
 	font-weight: 400;
 	font-style: oblique;
 	line-height: 24px;
+
 }
 
 .product
@@ -142,7 +185,9 @@ tr:nth-child(2n) {
 
 .footer {
 	border-top: 2px solid darkgray;
-	text-align: center;
-	padding: 15px;
-	margin: 15px;
+	height: 80px;
+	background-color: lightgray;
+	text-align: right;
+	padding: 20px 40px;
+	margin: 10px;
 }
